# npu-twin

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md
bench/prompts/: suite.jsonl
bench/results/: 20260419T064428Z.json  20260419T102925Z.json  20260419T120223Z.json  acceptance-v0.1.0.md  demo-v0.1.0-20260419T120159Z.txt
bench/scripts/: concurrency-run.fish
docs/: architecture.md  hardware.md  xdna1-linux-status.md
docs/decisions/: 0001-vulkan-over-rocm.md  0002-no-npu-draft.md  0003-target-draft-pair.md  0004-yunet-over-haar.md  0005-phase-3-cpu-gate-revision.md  0006-retire-haar.md  0007-mlir-aie-over-vitisai.md  0008-passthrough-m1-poc.md  0009-official-stack-dead-real-models-via-open.md  0010-1b-llm-on-xdna1-npu.md
project-a/: README.md
project-a/scripts/: bench.fish  fetch-models.fish  smoke.fish
project-a/systemd/: llama-speculative.service
project-b/: README.md  pyproject.toml  pyrightconfig.json
project-b/contrib/hypr/: presenced.conf
project-b/contrib/systemd/: npu-status.service  npu-status.timer  presenced.service
project-b/contrib/waybar/: config.jsonc  presenced.sh  style.css
project-b/models/: probe.onnx
project-b/presenced/: __main__.py  config.py  face.py  fsm.py  hypr.py  preflight.py  xdna_probe.py
project-b/scripts/: build-probe-onnx.py  fetch-yunet.sh  measure-latency.py
project-b/tests/: test_face_yunet.py  test_fsm.py  test_xdna_probe.py
project-c/: INSTALL.md  README.md  npu-status-log.md  npu_probe_verdict.py
scripts/: check-npu-status.fish  demo.fish  preflight.fish
(+45 files in other folders)
