[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "presenced"
version = "0.1.0"
description = "Presence daemon: face/gaze FSM driving Hyprland on idle"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
mediapipe = ["mediapipe>=0.10"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
presenced = "presenced.__main__:main"

[tool.setuptools.packages.find]
include = ["presenced*", "presencectl*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
